# MatrixTranspose-FPGA

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  LICENSE  README.md
api/: CMakeLists.txt  Makefile
api/common/: helper.h
api/include/: helper.h  transpose_fpga.h
api/src/: helper.c  main.c  opencl_utils.c  transpose_fpga.c
cmake/: build_kernel.cmake
docs/: bram_est.md  perf_model.md
host_api/: README.md  main.c
host_api/api/: transpose_api.h  transpose_fpga.c  transpose_fpga.h
host_api/common/: helper.c  helper.h  opencl_utils.c  opencl_utils.h
kernels/: CMakeLists.txt  Makefile  banked_NDRange.cl  banked_SWI.cl  config.h  config.h.in  diag_NDRange.cl  diag_SWI_bitrev.cl  diagonal.cl  diagonal_bitrev.cl  diagonal_bitrevin.cl  diagonal_opt.cl  diagonal_opt_bitrev.cl  matrixTranspose.cl  matrixTransposeBitrev.cl  matrixTranspose_bitrev.cl  matrixTranspose_bitrev_opt.cl  matrixTranspose_bitrevin.cl  mtrans_config.h.in  nd_diag.cl  simple.cl  simple_bitrev.cl  swi_bitrev_diag.cl  swi_diag.cl  trivial_SWI.cl
kernels/common/: mtrans_config.h.in
scripts/: mTrans_makefile.sh  mTrans_opt.sh  mTrans_opt_debug.sh  mTrans_opt_expm.sh  mTrans_simple.sh
transpose_kernel/: Makefile  transpose.cl
